--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.satia">
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.CAMERA" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -21,7 +21,12 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme"
         android:usesCleartextTraffic="true">
-        <activity android:name=".productDetials.FinalScreenReemProduct"></activity>
+        <activity android:name=".SucessActivity"></activity>
+        <activity android:name=".productDetials.FinalScreenReemProduct"
+            android:noHistory="false"
+            >
+
+        </activity>
         <activity android:name=".productDetials.CommonReemActivity" />
         <activity android:name=".FinalScreenProduct" />
         <activity android:name=".loginActivity.CommonProductActivity" />
@@ -56,7 +61,6 @@
         <meta-data
             android:name="android.support.UI_OPTIONS"
             android:value="splitActionBarWhenNarrow" />
-
 
         <provider
             android:name="androidx.core.content.FileProvider"
